testsuite/serd-tests/good/test-false-ends-with-dot.nt
<http://example.org/eg#s> <http://example.org/eg#p> "false"^^<http://www.w3.org/2001/XMLSchema#boolean> .
