testsuite/serd-tests/bad/bad-nt-syntax-uri-opening-brace.nt
# Bad IRI : opening brace.
<http://example/{oops> <http://example/p> <http://example/o> .
